# Rhyme

./: .gitignore  README.md
Reference implementation/ref/: CMakeLists.txt  Makefile  README.md
Reference implementation/ref/benchmark/: CMakeLists.txt  speed.c
Reference implementation/ref/include/: aes256ctr.h  config.h  encoding.h  ntt.h  packing.h  params.h  params_tables.h  poly.h  polymat.h  polyvec.h  randombytes.h  rans_freqs.h  rans_tables_tau128_split.h  rans_tables_tau30.h  rans_tables_tau30_split.h  rans_tables_tau42.h  rans_tables_tau60.h  rans_tables_tau60_split.h  reduce.h  sampler.h  sign.h  symmetric.h  zpntt.h
Reference implementation/ref/kat/: CMakeLists.txt  PQCgenKAT_sign.c  api.h  kat_sign.c  nist_rng.c  nist_rng.h
Reference implementation/ref/src/: aes256ctr.c  encoding.c  ntt.c  ntt_tables.c  packing.c  poly.c  polymat.c  polyvec.c  randombytes.c  reduce.c  sampler.c  sign.c  symmetric-shake.c  zpntt.c
Reference implementation/ref/src/keygen/: kg_main.c  kg_ntt.c  kg_ntt.h  kg_primes.c  kg_solver.c  kg_solver.h  kg_test_solver.c  kg_test_zint.c  kg_zint.c  kg_zint.h
Reference implementation/ref/test/: CMakeLists.txt  main.c  ntt_vectors.h  test_full.c  test_ntt.c  test_sign.c  test_stats.c
Reference implementation/ref/test/coprime_tools/: kg_coprime_bench.c  kg_descent_verify.c
Security estimation/Rhyme_params/: gussian_cut.py
Security estimation/Rhyme_sec/my-tests/: test_my_params.py
Security estimation/my-tests/: test_my_params.py
reference implemention/ref/: README.md
reference implemention/ref/benchmark/: speed.c
reference implemention/ref/include/: encoding.h  fips202.h  ntt.h  packing.h  rans_tables_tau128.h  sampler.h
reference implemention/ref/kat/: api.h  kat_sign.c
reference implemention/ref/src/: encoding.c  poly.c  polymat.c  polyvec.c  reduce.c  sampler.c  sign.c
reference implemention/ref/test/: CMakeLists.txt
security estimation/: README.md
security estimation/docker/: Dockerfile.dev
security estimation/my-tests/: test_my_params.py
