foreach(MODE 128 256 384 512)
  add_executable(speed_rhyme${MODE} speed.c cpucycles.c)
  target_compile_definitions(speed_rhyme${MODE} PRIVATE RHYME_MODE=${MODE})
  target_include_directories(speed_rhyme${MODE} PRIVATE . ../include)
  target_link_libraries(speed_rhyme${MODE} rhyme${MODE} rhyme_rng)
endforeach()
