foreach(MODE 128 256 384 512)
  add_executable(kat_rhyme${MODE} PQCgenKAT_sign.c nist_rng.c)
  target_compile_definitions(kat_rhyme${MODE} PRIVATE RHYME_MODE=${MODE})
  target_include_directories(kat_rhyme${MODE} PRIVATE . ../include)
  target_link_libraries(kat_rhyme${MODE} rhyme${MODE})
endforeach()
