foreach(MODE 128 256 384 512)
  add_executable(test_rhyme${MODE} main.c)
  target_compile_definitions(test_rhyme${MODE} PRIVATE RHYME_MODE=${MODE})
  target_link_libraries(test_rhyme${MODE} rhyme${MODE} rhyme_rng)
  add_test(NAME rhyme${MODE}_func COMMAND test_rhyme${MODE})

  add_executable(test_ntt${MODE} test_ntt.c)
  target_compile_definitions(test_ntt${MODE} PRIVATE RHYME_MODE=${MODE})
  target_include_directories(test_ntt${MODE} PRIVATE .)
  target_link_libraries(test_ntt${MODE} rhyme${MODE} rhyme_rng)
  add_test(NAME rhyme${MODE}_ntt COMMAND test_ntt${MODE})
endforeach()
